--- a/public/index.html
+++ b/public/index.html
@@ -67,21 +67,33 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     function draw() {
-      ctx.clearRect(0,0,600,400);
+      ctx.clearRect(0, 0, 600, 400);
       Object.entries(players).forEach(([id, p]) => {
         ctx.save();
         ctx.globalAlpha = p.alive ? 1 : 0.3;
-        ctx.fillStyle = id === myId ? '#4caf50' : '#03a9f4';
+
+        // วาด hitbox ขอบแดง (รัศมี 25)
         ctx.beginPath();
-        ctx.arc(p.x, p.y, 15, 0, Math.PI*2);
+        ctx.arc(p.x, p.y, 25, 0, Math.PI * 2);
+        ctx.strokeStyle = 'red';
+        ctx.lineWidth = 2;
+        ctx.stroke();
+
+        // วาดตัวผู้เล่น
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, 15, 0, Math.PI * 2);
+        ctx.fillStyle = id === myId ? '#4caf50' : '#03a9f4';
         ctx.fill();
         ctx.strokeStyle = '#fff';
         ctx.lineWidth = 2;
         ctx.stroke();
+
+        // ชื่อผู้เล่น
         ctx.fillStyle = '#fff';
         ctx.font = '13px sans-serif';
         ctx.textAlign = 'center';
         ctx.fillText(p.username, p.x, p.y - 22);
+
         ctx.restore();
       });
       requestAnimationFrame(draw);
