--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
     <div id="status"></div>
     <button onclick="location.reload()">ออกจากห้อง</button>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     let players = {};
