--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
     <div>กดลูกศรเพื่อเดิน, Spacebar เพื่อยิง</div>
     <div id="status"></div>
     <button onclick="location.reload()">ออกจากห้อง</button>
+    <div id="playersList">
+      <h4>ผู้เล่นในห้อง:</h4>
+      <ul id="players"></ul>
   </div>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -81,6 +84,8 @@
       document.getElementById('login').style.display = 'none';
       document.getElementById('game').style.display = 'block';
       document.getElementById('roomInfo').innerText = `ห้อง: ${myRoom}`;
+      document.getElementById('playersList').style.display = 'block';
+      document.getElementById('players').innerHTML = '';  
     }
 
     socket.on('players', data => {
